--- a/less/specific.less
+++ b/less/specific.less
@@ -51,3 +51,7 @@
 	50% { transform: rotate(180deg); filter: blur(7px); }
 	to { transform: rotate(360deg); filter: blur(1px); }
 }
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
